--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"**/*.ts\" \"**/*.md\"",
     "test": "jest",
-    "test:e2e": "jest -c jest-e2e.json"
+    "test:e2e": "jest -c jest-e2e.json",
+    "prisma": "prisma",
+    "migrate:dev": "prisma migrate dev",
+    "db:generate": "prisma generate"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.7",
     "@nestjs/core": "^10.4.7",
     "@nestjs/platform-express": "^10.4.7",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "@prisma/client": "^5.10.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.16",
@@ -38,6 +42,7 @@
     "ts-jest": "^29.1.2",
     "@types/jest": "^29.5.12",
     "supertest": "^6.3.4",
-    "@types/supertest": "^2.0.16"
+    "@types/supertest": "^2.0.16",
+    "prisma": "^5.10.2"
   }
 }
